# dataset-profile-tool

./: .dockerignore  .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  docker-compose.single.yml  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/: __init__.py  main.py  models.py  settings.py
apps/worker/src/core/: anomalies.py  drift.py  duckdb_session.py  pii.py  runtime_limits.py  schema.py  stats.py
apps/worker/src/dataprofile_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/worker/src/routes/: __init__.py  drift.py  health.py  profile.py  schema_infer.py  share.py
apps/worker/src/storage/: runtime.py  share_store.py
apps/worker/tests/: test_anomalies.py  test_drift.py  test_drift_export_stats.py  test_drift_type_change.py  test_health.py  test_pii.py  test_profile_parquet_modes.py  test_profile_route.py  test_profile_samples.py  test_profile_stats.py  test_remote_sources.py  test_schema.py  test_schema_infer_route.py  test_share.py  test_sqlite_sample_rows.py  test_stats.py  test_upload_limits.py
apps/worker/tests/fixtures/: generate_samples.py
deploy/: README.md  r2-lifecycle-rules.example.json
docs/: LEGAL.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md  qc-appendix-b.md
scripts/: benchmark_worker.py  measure_worker_peak_rss.py  run_lighthouse.py  validate_worker_coverage.py  verify_acceptance.py  verify_deployment_artifacts.py  verify_local_stack.py  verify_pass2.py  verify_privacy_security.py
(+71 files in other folders)
