[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataprofile-worker"
version = "0.1.0"
description = "FastAPI worker for DataProfile."
requires-python = ">=3.12"
dependencies = [
  "duckdb>=0.10",
  "fastapi>=0.115",
  "fastavro>=1.10",
  "pydantic>=2.8",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.3",
  "pytest-cov>=5.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["apps/worker/tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
